# stable-baselines3-contrib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  whole_sequence_speed_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  custom_env.yml  documentation.yml  feature_request.yml  issue-template.md  question.yml
.github/workflows/: ci.yml
docs/: README.md  conda_env.yml  conf.py  index.rst  spelling_wordlist.txt
docs/_static/img/: logo.png~
docs/common/: torch_layers.md  torch_layers.rst  utils.md  utils.rst  wrappers.md  wrappers.rst
docs/guide/: algos.md  algos.rst  examples.md  examples.rst  install.md  install.rst
docs/misc/: changelog.md  changelog.rst
docs/modules/: ars.md  ars.rst  bdpi.rst  crossq.md  crossq.rst  dueling_dqn.rst  grpo.rst  ppo_mask.md  ppo_mask.rst  ppo_recurrent.md  ppo_recurrent.rst  qrdqn.md  qrdqn.rst  reppo.rst  sacd.md  sacd.rst  tqc.md  tqc.rst  trpo.md  trpo.rst
experiments/fetch/explore/: explore_diayn_fetch.py  explore_go_explore_fetch.py  explore_icm_fetch.py  explore_random_fetch.py  explore_sac_fetch.py  explore_skewfit_fetch.py  explore_surprise_fetch.py
experiments/maze_exploration/: diayn.py  icm.py  render_maze.py  rnd.py  silver.py  skew_fit.py  surprise.py  vime.py
experiments/optimize_maze_exploration/: optimize_diayn.py  optimize_icm.py  optimize_rnd.py  optimize_skew_fit.py  optimize_surprise.py  optimize_vime.py
sb3_contrib/: __init__.py  env.py  version.txt
sb3_contrib/ars/: __init__.py  ars.py  policies.py
sb3_contrib/bdpi/: __init__.py  bdpi.py  policies.py
sb3_contrib/cem/: __init__.py  cem.py  policies.py
sb3_contrib/common/: buffers.py  distributions.py  hl_gauss.py  network_layers.py  policies.py  population_based_algorithm.py  torch_layers.py  utils.py
sb3_contrib/crossq/: __init__.py  crossq.py  policies.py
sb3_contrib/diayn/: __init__.py  diayn.py
sb3_contrib/dueling_dqn/: __init__.py  dueling_dqn.py  policies.py
sb3_contrib/go_explore/: __init__.py  archive.py  cells.py  feature_extractor.py  go_explore.py
sb3_contrib/grpo/: __init__.py  grpo.py
sb3_contrib/icm/: __init__.py  icm.py
sb3_contrib/iqn/: __init__.py  iqn.py  policies.py
sb3_contrib/ppo_attention/: __init__.py  architecture.py  policies.py  ppo_attention.py
sb3_contrib/ppo_hybrid/: __init__.py  buffers.py  policies.py  ppo_hybrid.py
sb3_contrib/ppo_lstm/: __init__.py  policies.py  ppo_lstm.py
sb3_contrib/ppo_mask/: __init__.py  policies.py  ppo_mask.py
sb3_contrib/ppo_mask_recurrent/: __init__.py  policies.py  ppo_mask_recurrent.py
sb3_contrib/ppo_recurrent/: __init__.py  policies.py  ppo_recurrent.py
sb3_contrib/qrdqn/: __init__.py  policies.py  qrdqn.py
sb3_contrib/reppo/: __init__.py  policies.py  reppo.py
sb3_contrib/rnd/: __init__.py  rnd.py
sb3_contrib/sac_lambda/: __init__.py  policies.py  sac.py
sb3_contrib/sacd/: __init__.py  policies.py  sacd.py
sb3_contrib/silver/: __init__.py  silver.py
sb3_contrib/simhash/: __init__.py  simhash.py
sb3_contrib/skew_fit/: __init__.py  goalify.py  skew_fit.py
sb3_contrib/surprise/: __init__.py  surprise.py
sb3_contrib/tqc/: __init__.py  policies.py  tqc.py
sb3_contrib/trpo/: __init__.py  policies.py  trpo.py
sb3_contrib/vime/: __init__.py  vime.py
scripts/: run_tests.sh
tests/: test_cnn.py  test_deterministic.py  test_dict_env.py  test_distributions.py  test_go_explore.py  test_grpo.py  test_identity.py  test_invalid_actions.py  test_lstm.py  test_run.py  test_save_load.py  test_train_eval_mode.py  test_utils.py  test_wrappers.py
tests/buffers/: test_recurrent_buff.py
tests/wrappers/: test_action_masker.py  test_time_feature.py
(+57 files in other folders)
