[metadata]
# This includes the license file in the wheel.
license_files = LICENSE

[tool:pytest]
# Deterministic ordering for tests; useful for pytest-xdist.
env =
	PYTHONHASHSEED=0
filterwarnings =
		# Tensorboard warnings
		ignore::DeprecationWarning:tensorboard
		# Gym warnings
		ignore:Parameters to load are deprecated.:DeprecationWarning
		ignore:the imp module is deprecated in favour of importlib:PendingDeprecationWarning
		ignore::UserWarning:gym
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[pytype]
inputs = sb3_contrib

[mypy]
ignore_missing_imports = True
follow_imports = silent
show_error_codes = True
exclude = (?x)(
	sb3_contrib/ppo_recurrent/ppo_recurrent.py$
	| sb3_contrib/ars/ars.py$
	| sb3_contrib/ars/policies.py$
	| sb3_contrib/qrdqn/qrdqn.py$
	| sb3_contrib/qrdqn/policies.py$
	| sb3_contrib/common/recurrent/policies.py$
	| sb3_contrib/common/recurrent/buffers.py$
	| sb3_contrib/common/maskable/distributions.py$
	| sb3_contrib/common/maskable/callbacks.py$
	| sb3_contrib/common/maskable/policies.py$
	| sb3_contrib/common/maskable/buffers.py$
	| sb3_contrib/common/envs/invalid_actions_env.py$
	| sb3_contrib/common/vec_env/async_eval.py$
	| sb3_contrib/tqc/tqc.py$
	| sb3_contrib/tqc/policies.py$
	| sb3_contrib/trpo/trpo.py$
	| sb3_contrib/ppo_mask/ppo_mask.py$
	| tests/test_train_eval_mode.py$
  )

[flake8]
# line breaks before and after binary operators
ignore = W503,W504,E203,E231
# Ignore import not used when aliases are defined
per-file-ignores =
	./sb3_contrib/__init__.py:F401
	./sb3_contrib/ars/__init__.py:F401
	./sb3_contrib/ppo_mask/__init__.py:F401
	./sb3_contrib/ppo_recurrent/__init__.py:F401
	./sb3_contrib/qrdqn/__init__.py:F401
	./sb3_contrib/tqc/__init__.py:F401
	./sb3_contrib/trpo/__init__.py:F401
	./sb3_contrib/common/wrappers/__init__.py:F401
	./sb3_contrib/common/envs/__init__.py:F401
	./sb3_contrib/common/vec_env/__init__.py:F401

exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # Don't check the doc
    docs/
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
		*.egg-info
max-complexity = 15
# The GitHub editor is 127 chars wide
max-line-length = 127

[isort]
profile = black
line_length = 127
src_paths = sb3_contrib
